# insightful

./: .gitignore  Makefile  README.md  alembic.ini  package-lock.json  package.json  proxy.ts  pyproject.toml  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/collections/: page.tsx
app/components/: ActionDescriptionModal.tsx  BulkDeleteNews.tsx  CreateCustomSourceForm.tsx  DeleteKeywordButton.tsx  DeleteSourceButton.tsx  EditKeywordModal.tsx  EditSourceModal.tsx  LandingPage.tsx  Navbar.tsx  NewsCard.tsx  NewsFilters.tsx  PinButton.tsx  RefreshKeywordBanner.tsx  RefreshKeywordNews.tsx  RefreshNews.tsx  RefreshSourceBanner.tsx  RefreshSourceNews.tsx  Sidebar.tsx
app/insights/: page.tsx
app/keywords/: page.tsx
app/lib/: actions.ts  api.ts  errors.ts  logger.ts
app/lib/auth/: auth.ts  (+2 more)
app/login/: page.tsx
app/news/: page.tsx
app/note/: page.tsx
app/sources/: page.tsx
migrations/: env.py
migrations/versions/: 02c923cfb9ac_add_note_table.py  085c05736484_make_query_keyword_id_optional_in_.py  1f3c6b6582ae_add_description_cloumn_query_keyboard_.py  689134add2f6_add_fetch_history_id_to_newsarticle.py  69afb365aff5_add_detailed_fetch_stats_and_change_to_.py  79c7320ee471_keyword_history_table.py  a1b2c3d4e5f6_add_articleaction_table.py  bd9ad74ad016_add_query_keyword_table.py  d6013b5d44fb_add_is_pinned_to_newssource_and_.py  f13f977c1264_add_fetchhistory.py  fc1dc7670b3f_add_advanced_query_and_exclude_domains.py
news_agent/: agent_swarm.py  agent_utils.py  config.py  db.py  main.py  model.py  news_fetcher.py  schemas.py
(+19 files in other folders)
