[project]
name = "insightful"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.138.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "requests>=2.34.2",
    "sqlmodel>=0.0.39",
    "tzdata>=2026.2",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
    "beautifulsoup4>=4.15.0",
    "duckduckgo-search>=8.1.1",
    "newspaper3k>=0.2.8",
    "lxml-html-clean>=0.4.5",
]
